--- a/mai.html
+++ b/mai.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="http://js.arcgis.com/3.39/esri/css/esri.css">
     <link rel="stylesheet" href="css/index.css"/>
     <script src="http://js.arcgis.com/3.39/"></script>
-    <script src="js/index.js"></script>
+    <script src="js/index2.js"></script>
     <style>
       html, body, #divMap, #divMap1 {
         height: 100%;
